# winland-Android

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FINAL_SUMMARY.md  LICENSE  PROJECT_SUMMARY.md  README.md  build-arm64.sh  build.gradle  gradle.properties  gradlew  libegl-mesa0_25.2.8-0ubuntu0.24.04.1_arm64.deb  libgl1-mesa-dri_25.2.8-0ubuntu0.24.04.1_arm64.deb  libgles2_1.7.0-1build1_arm64.deb  libglx-mesa0_25.2.8-0ubuntu0.24.04.1_arm64.deb  mesa-26.1.2-kgsl-zink.patch  settings.gradle  settings.gradle.kts
.cargo/: config.toml
.github/workflows/: android.yml
.opencode/: summary.md
.opencode/plans/: rendering-fixes.md
.opencode/skills/ab-test-setup/: SKILL.md
.opencode/skills/ad-creative/: SKILL.md
.opencode/skills/agent-designer/: SKILL.md
.opencode/skills/agent-protocol/: SKILL.md
.opencode/skills/agile-product-owner/: SKILL.md
.opencode/skills/ai-act-readiness/: SKILL.md
.opencode/skills/ai-seo/: SKILL.md
.opencode/skills/aims-audit/: SKILL.md
.opencode/skills/analytics-tracking/: SKILL.md
.opencode/skills/api-design-reviewer/: SKILL.md
.opencode/skills/apple-hig-expert/: SKILL.md
.opencode/skills/atlassian-admin/: SKILL.md
.opencode/skills/atlassian-templates/: SKILL.md
.opencode/skills/board/: SKILL.md
.opencode/skills/board-deck-builder/: SKILL.md
.opencode/skills/board-meeting/: SKILL.md
.opencode/skills/boardroom/: SKILL.md
.opencode/skills/brief/: SKILL.md
.opencode/skills/business-growth-skills/: SKILL.md
.opencode/skills/c-level-advisor/: SKILL.md
.opencode/skills/c-level-agents/: SKILL.md
.opencode/skills/caio-review/: SKILL.md
.opencode/skills/capa-officer/: SKILL.md
.opencode/skills/cco-review/: SKILL.md
.opencode/skills/cdo-review/: SKILL.md
.opencode/skills/ceo-advisor/: SKILL.md
.opencode/skills/cfo-advisor/: SKILL.md
.opencode/skills/cfo-review/: SKILL.md
.opencode/skills/changelog-generator/: SKILL.md
.opencode/skills/chief-ai-officer-advisor/: SKILL.md
.opencode/skills/chief-customer-officer-advisor/: SKILL.md
.opencode/skills/chief-data-officer-advisor/: SKILL.md
.opencode/skills/chief-of-staff/: SKILL.md
.opencode/skills/chro-advisor/: SKILL.md
.opencode/skills/churn-prevention/: SKILL.md
.opencode/skills/ci-cd-pipeline-builder/: SKILL.md
.opencode/skills/ciso-advisor/: SKILL.md
.opencode/skills/ciso-review/: SKILL.md
.opencode/skills/cmo-advisor/: SKILL.md
.opencode/skills/cmo-review/: SKILL.md
.opencode/skills/code-reviewer/: SKILL.md
.opencode/skills/code-to-prd/: SKILL.md
.opencode/skills/cold-email/: SKILL.md
.opencode/skills/command-guide/: SKILL.md
.opencode/skills/competitive-intel/: SKILL.md
.opencode/skills/competitor-alternatives/: SKILL.md
.opencode/skills/compliance-os/: SKILL.md
.opencode/skills/compliance-readiness/: SKILL.md
.opencode/skills/confluence-expert/: SKILL.md
.opencode/skills/content-humanizer/: SKILL.md
.opencode/skills/content-production/: SKILL.md
.opencode/skills/content-strategy/: SKILL.md
.opencode/skills/context-engine/: SKILL.md
.opencode/skills/coo-advisor/: SKILL.md
.opencode/skills/copy-editing/: SKILL.md
.opencode/skills/copywriting/: SKILL.md
.opencode/skills/cpo-advisor/: SKILL.md
.opencode/skills/cpo-review/: SKILL.md
.opencode/skills/cro-advisor/: SKILL.md
.opencode/skills/cro-review/: SKILL.md
.tmp/: log_output_preview.txt  log_output_tail.txt
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
assets/: webrtc_client.html
docs/: ARCHITECTURE.md  BUG_TRACKER.md  MASTER_PLAN.md
docs/ui-prototypes/: settings.html  terminal.html
libxkbcommon/: android-arm64.ini
native/: Cargo.toml  build.rs  cxx_stubs.c
native/.cargo/: config.toml
native/lib/smithay/: Cargo.toml
native/lib/smithay/src/wayland/: mod.rs  xwayland_shell.rs
native/lib/smithay/src/wayland/ext_workspace/: mod.rs
native/lib/smithay/src/wayland/output/: handlers.rs  mod.rs
native/lib/smithay/src/wayland/seat/: mod.rs
native/lib/smithay/src/xwayland/: xserver.rs
native/lib/smithay/src/xwayland/xwm/: mod.rs
native/src/: audio.rs  audio_oboe.rs  compositor.rs  distro.rs  lib.rs  root.rs  usb.rs  winland_core.udl
native/src/android/: ahardwarebuffer.rs  bridge_clipboard.rs  bridge_diagnostics.rs  bridge_init.rs  bridge_input.rs  bridge_lifecycle.rs  bridge_surface.rs  command_channel.rs  mod.rs  sensor_shim.c
native/src/android/backend/: gl_utils.rs  mod.rs  smithay_backend.rs
native/src/android/backend/wayland/: bind.rs  compositor.rs  engine_timing.rs  event_centralizer.rs  event_handler.rs  handlers.rs  input.rs  input_router.rs  keymap.rs  mod.rs  output_management.rs  renderer_config.rs  runtime_state.rs  seat.rs  seat_injector.rs  selection.rs  server.rs  shell.rs  smithay_runtime.rs  winit_backend.rs  x11.rs
native/src/android/utils/: context.rs  mod.rs  ndk.rs  setup.rs  ui.rs
native/src/core/: mod.rs  root_env.rs
native/temp_bindgen/: Cargo.toml
native/temp_bindgen/src/: main.rs
scripts/: build-automation.sh  setup-termux.sh
src/bridge/: audio_bridge.c  audio_bridge.h  clipboard_bridge.c  clipboard_bridge.h  file_sharing.c  file_sharing.h  notification_bridge.c  notification_bridge.h  usb_redirect.c  usb_redirect.h
src/native/: buffer_manager.c  buffer_manager.h  debug_overlay.c  debug_overlay.h  display_filter.c  display_filter.h  dmabuf_handler.c  dmabuf_handler.h  egl_display.c  egl_display.h  input_handler.c  input_handler.h  keyboard_manager.c  keyboard_manager.h  multi_display.c  multi_display.h  output_manager.c  output_manager.h  package_manager.c  package_manager.h  power_manager.c  power_manager.h  root_daemon.c  root_daemon.h  seat_manager.c  seat_manager.h  surface_manager.c  surface_manager.h  tiling_layout.c  tiling_layout.h  vnc_server.c  vnc_server.h  wayland_compositor.c  wayland_compositor.h  webrtc_server.c  webrtc_server.h  xdg_shell_impl.c  xdg_shell_impl.h  xwayland.c  xwayland.h
src/protocols/: xdg-shell-protocol.h
terminal-emulator/: build.gradle.kts
terminal-view/: build.gradle.kts
(+170 files in other folders)
